Fix link extension for business goals documentation from HTML to Markdown

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="card">
                 <h3>🎯 Project Goals & SLOs</h3>
                 <p>Business objectives, service level objectives, and measurable outcomes. Includes performance targets and quality metrics.</p>
-                <a href="docs/goal.html" class="btn">View Business Goals →</a>
+                <a href="docs/goal.md" class="btn">View Business Goals →</a>
             </div>
 
             <div class="card">
