BROKEN: Fix GitHub Actions - WIP

--- a/index.html
+++ b/index.html
@@ -124,12 +124,7 @@
 <body>
     <div class="hero">
         <h1>🤖 AI Code Agent</h1>
-        <p>Professional AI-powered code generation system with comprehensive architecture documentation following industry standards</p>
-        <div class="badges">
-            <span class="badge professional">Professional Architecture</span>
-            <span class="badge automated">Auto-Generated Docs</span>
-            <span class="badge github">GitHub Pages</span>
-        </div>
+        <p>AI-powered code generation system with architecture documentation</p>
     </div>
 
     <div class="container">
