Improved architecture loading page with progress info

--- a/architecture.html
+++ b/architecture.html
@@ -157,6 +157,11 @@
                 <h2>🚀 Architecture Diagrams werden generiert...</h2>
                 <p>GitHub Actions erstellt gerade automatisch die C4-Diagramme aus der Structurizr DSL.</p>
                 <p><strong>Status:</strong> Build läuft - Die Seite wird automatisch aktualisiert, wenn die Diagramme fertig sind.</p>
+                <p><strong>Fortschritt:</strong> 
+                    ✅ C4 DSL validiert → 
+                    🔄 Diagramme exportieren → 
+                    🔄 GitHub Pages deployment
+                </p>
             </div>
             
             <div style="margin-top: 2rem;">
