FIX: Correct C4 view keys and update HTML diagram references
 **Problem 1:** DSL Parser error - View keys cannot contain spaces or hyphens
 **Problem 2:** HTML references wrong diagram filenames causing endless loading

 **Solution:**
- Changed view keys to alphanumeric only (SystemContext, Containers, WebhookComponents, etc.)
- Updated HTML expectedDiagrams array to match actual generated filenames
- Removed dynamic workflow view temporarily to focus on core diagrams

**Expected Result:**
- DSL will parse successfully without view key errors
- HTML will find and display the generated diagrams correctly
- No more endless loading spinner

--- a/architecture.html
+++ b/architecture.html
@@ -173,13 +173,12 @@
             
             // List of expected diagrams
             const expectedDiagrams = [
-                { name: 'C1 - System Context', file: 'C1-SystemContext.png', description: 'Übersicht über das gesamte AI Code Agent System und externe Abhängigkeiten' },
-                { name: 'C2 - Container', file: 'C2-Container.png', description: 'Detaillierte Darstellung der Microservices (Gateway, Orchestrator, LLM-Patch, Adapter)' },
-                { name: 'C3 - Webhook Components', file: 'C3-WebhookComponents.png', description: 'Interne Struktur des Webhook Service' },
-                { name: 'C3 - Orchestrator Components', file: 'C3-OrchestratorComponents.png', description: 'Interne Struktur des Orchestrator Service' },
-                { name: 'C3 - LLM Gateway Components', file: 'C3-LLMGatewayComponents.png', description: 'Interne Struktur des LLM Gateway Service' },
-                { name: 'C3 - Adapter Components', file: 'C3-AdapterComponents.png', description: 'Interne Struktur des Adapter Service' },
-                { name: 'Edit Workflow', file: 'EditWorkflow.png', description: 'Ablauf von PR-Comment bis Code-Generation' }
+                { name: 'System Context', file: 'SystemContext.png', description: 'Übersicht über das gesamte AI Code Agent System und externe Abhängigkeiten' },
+                { name: 'Container View', file: 'Containers.png', description: 'Detaillierte Darstellung der Microservices (Gateway, Orchestrator, LLM-Patch, Adapter)' },
+                { name: 'Webhook Components', file: 'WebhookComponents.png', description: 'Interne Struktur des Webhook Service' },
+                { name: 'Orchestrator Components', file: 'OrchestratorComponents.png', description: 'Interne Struktur des Orchestrator Service' },
+                { name: 'LLM Gateway Components', file: 'LLMGatewayComponents.png', description: 'Interne Struktur des LLM Gateway Service' },
+                { name: 'Adapter Components', file: 'AdapterComponents.png', description: 'Interne Struktur des Adapter Service' }
             ];
             
             let diagramsFound = 0;
