refactor: Update links in project goals and Arc42 documentation to use query parameters for improved navigation

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
             <div class="card">
                 <h3>🎯 Project Goals & SLOs</h3>
                 <p>Business objectives, service level objectives, and measurable outcomes. Includes performance targets and quality metrics.</p>
-                <a href="docs/goal.md" class="btn">View Business Goals →</a>
+                <a href="docs/md.html?path=goal.md" class="btn">View Business Goals →</a>
             </div>
 
             <div class="card">
                 <h3>📚 Arc42 Documentation</h3>
                 <p>Comprehensive system documentation following arc42 template. Covers requirements, constraints, context, and solution strategy.</p>
-                <a href="docs/arc42/" class="btn">Read Documentation →</a>
+                <a href="docs/md.html?path=arc42/README.md" class="btn">Read Documentation →</a>
             </div>
 
             <div class="card">
