Add detailed documentation and troubleshooting guides
- Introduced a new section in index.html for Markdown documentation, including links to system requirements, architecture, usage examples, monitoring guide, troubleshooting, and API reference.
- Updated system architecture documentation with a comprehensive overview of the microservices architecture, including service statuses and deployment instructions.
- Created a complete API reference document detailing all endpoints, request/response formats, and usage examples.
- Added system monitoring documentation covering health checks, metrics, log management, and alerting configurations.
- Established system requirements documentation outlining hardware, software, and environment configurations needed for setup.
- Developed a troubleshooting guide to assist users in diagnosing and resolving common issues encountered during setup and operation.
- Included usage examples to demonstrate practical applications of the AI code generation features.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
         <!-- System Architecture -->
         <div class="section">
-            <div class="section-header">🏗️ System Architecture</div>
+            <div class="section-header">🏗️ Current System Architecture</div>
             <div class="section-content">
                 <p>Production-ready microservices architecture with observability and monitoring.</p>
                 
