feat: Update links to core services and monitoring stack documentation

--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
                         <h4>Core Services (8)</h4>
                         <span class="status-badge status-complete">Running</span>
                         <p>Gateway, Orchestrator, Adapter, LLM-Patch, Traefik, ngrok, Ollama, Azurite</p>
-                        <a href="README.html#-complete-service-overview" class="btn">View Details →</a>
+                        <a href="docs/core-services.html" class="btn">View Details →</a>
                     </div>
                     
                     <div class="card">
                         <h4>Monitoring Stack (8)</h4>
                         <span class="status-badge status-complete">Running</span>
                         <p>Grafana, Prometheus, Loki, Alertmanager, cAdvisor, Node Exporter, Health Monitor</p>
-                        <a href="README.html#-service-health--monitoring" class="btn">Health Dashboard →</a>
+                        <a href="docs/monitoring-stack.html" class="btn">View Details →</a>
                     </div>
                 </div>
                 
